Tue Aug 28 18:38:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add a configuration file flag (NOCACHE) to disable cat page caching
	(thanks, Ralph Corderoy; Debian bug #196642).

	* src/manp.c (add_to_dirlist): Recognise NOCACHE.
	* src/man.c (display): Don't save a cat page if NOCACHE is set.
	* src/man_db.conf.in: Document NOCACHE.
	* man/man5/manpath.man5 (FORMAT): Document NOCACHE.
	* docs/NEWS: Document this.

Tue Aug 28 17:23:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Bump to 2.5.0; I think there's now enough to justify
	  that.

Tue Aug 28 17:19:16 BST 2007  Colin Watson  <cjwatson@debian.org>

	Implement and use a decompression library. This allows cat pages to
	be saved in the background (Debian bug #18452) and operation with a
	read-only /tmp (Debian bug #165499).

	* lib/pipeline.h (struct command): Add support for commands that
	  consist of calling a function rather than executing a process.
	  (struct pipeline): Add want_infile and want_outfile members. Note
	  that infile and outfile default to NULL. Add source, buffer,
	  buflen, bufmax, line_cache, and peek_offset members.
	  (command_new_function, command_dump, command_tostring,
	  pipeline_connect, pipeline_pump, pipeline_read, pipeline_peek,
	  pipeline_peek_size, pipeline_peek_skip, pipeline_readline,
	  pipeline_peekline): New prototypes.
	  (pipeline_join): Update description for want_infile and
	  want_outfile.
	* lib/pipeline.c (command_new, command_dup, command_arg,
	  command_argv, command_args, command_argstr, command_free): Update
	  for 'struct command' changes.
	  (command_new_function, command_dump, command_tostring): New
	  functions.
	  (pipeline_new, pipeline_join, pipeline_dump, pipeline_tostring):
	  Update for 'struct pipeline' changes.
	  (pipeline_dump): Use command_dump.
	  (pipeline_tostring): Use command_tostring.
	  (pipeline_start): Implement want_infile, want_outfile, and
	  function commands. Make zero-command case work properly (read