@@ -1,3 +1,9 @@
+Tue Aug 28 19:07:53 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (display_catman): Take a decompressor pipeline argument.
+	  Connect it to format_cmd.
+	  (display): Update call to display_catman.
+
 Tue Aug 28 18:38:31 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	Add a configuration file flag (NOCACHE) to disable cat page caching
